# HoleDetection

./: CMakeLists.txt  README.md  holeDetection.cpp  install.sh  run_all.sh
data/: Fig12_1d.xyz  Fig12_2d.xyz  Fig12_2h.xyz  Fig12_3d.xyz  Fig12_3h.xyz  Fig13_1h.xyz  Fig13_2h.xyz  Fig13_3h.xyz  Fig13_4h.xyz  Fig13_5h.xyz  Fig13_6h.xyz  Fig16_1c.xyz  Fig16_1f.xyz  Fig16_2c.xyz  Fig16_2f.xyz  Fig17d.xyz  Fig18a.xyz  Fig18b.xyz  Fig18c.xyz  Fig18d.xyz  Fig1c.xyz  Fig2d.xyz  Fig4c.xyz  Fig4d.xyz  Table1d.xyz  Table1f.xyz  Table2_1d.xyz  Table2_1f.xyz  Table2_2b.xyz  Table2_2d.xyz  Table2_2f.xyz
